# eb-interface-rs

./: Cargo.toml  README.md
benches/: Cargo.toml  README.md
benches/benches/: invoice_to_xml.rs
src/: address.rs  biller.rs  contact.rs  decimal.rs  details.rs  document.rs  identification.rs  invoice.rs  invoice_recipient.rs  lib.rs  order_reference.rs  payment_method.rs  reduction_and_surcharge.rs  tax.rs  utils.rs  xml.rs
