[package]
name = "eb-interface-rs"
version = "0.0.16"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { version = "~1", default-features = true, features = [] }
regex = { version = "~1", default-features = false, features = [] }
rust_decimal = { version = "~1", default-features = false, features = [] }

[dev-dependencies]
rust_decimal_macros = { version = "~1", default-features = false, features = [] }
