[package]
name = "eb-interface-rs"
version = "0.0.16"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.11.1", default-features = false, features = [] }
rust_decimal = { version = "1.37.2", default-features = false, features = [] }
